moved docs to src folder

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-see docs/README.rst or https://github.com/afaulconbridge/PyAChemKit/blob/master/doc/README.rst or http://afaulconbridge.github.com/PyAChemKit/doc/html/README.html.
+see docs/README.rst 
+or https://github.com/afaulconbridge/PyAChemKit/blob/master/doc/README.rst 
+or http://afaulconbridge.github.com/PyAChemKit/doc/html/README.html
